added acknowledgement in readme

--- a/README.adoc
+++ b/README.adoc
@@ -90,3 +90,11 @@ data.stream()
     .map(lazy(sneaky(URI::new)))
     .collect(discardingFailures());
 ----
+
+== Acknowledgement
+
+The motivation for this experiment was triggered by the work of Yohan Legat, a co-worker at 
+http://zenika.com[Zenika]. His work is also on 
+https://github.com/Zenika/Blogs/tree/master/20140214-Try[GitHub] 
+and he wrote a article (in French) on 
+http://blog.zenika.com/index.php?post/2014/02/19/Repenser-la-propagation-des-exceptions-avec-Java-8[Zenika's technical blog].
